--- a/src/app/app.html
+++ b/src/app/app.html
@@ -82,6 +82,15 @@
           <span class="field-label">{{ 'annotation.fields.size.label' | t }}</span>
           <input type="number" [(ngModel)]="p.field.fontSize" min="8" max="72" />
         </label>
+        <label class="field">
+          <span class="field-label">{{ 'annotation.fields.font.label' | t }}</span>
+          <select [(ngModel)]="p.field.fontType">
+            <option *ngFor="let option of fontOptions" [ngValue]="option.cssDeclaration"
+              [style.fontFamily]="option.fontFamilyValue">
+              {{ option.labelKey | t }}
+            </option>
+          </select>
+        </label>
         <div class="color-section">
           <span class="field-label">{{ 'annotation.fields.color.label' | t }}</span>
           <div class="color-row">
@@ -114,6 +123,15 @@
         <label class="field field-small">
           <span class="field-label">{{ 'annotation.fields.size.label' | t }}</span>
           <input type="number" [(ngModel)]="e.field.fontSize" min="8" max="72" />
+        </label>
+        <label class="field">
+          <span class="field-label">{{ 'annotation.fields.font.label' | t }}</span>
+          <select [(ngModel)]="e.field.fontType">
+            <option *ngFor="let option of fontOptions" [ngValue]="option.cssDeclaration"
+              [style.fontFamily]="option.fontFamilyValue">
+              {{ option.labelKey | t }}
+            </option>
+          </select>
         </label>
         <div class="color-section">
           <span class="field-label">{{ 'annotation.fields.color.label' | t }}</span>
