--- a/src/styles.scss
+++ b/src/styles.scss
@@ -290,7 +290,8 @@ header .logo {
   backdrop-filter: blur(10px);
 
   input[type="text"],
-  input[type="number"] {
+  input[type="number"],
+  select {
     border-radius: 4px;
     border: 1px solid rgba(94, 234, 212, 0.25);
     padding: 6px;
@@ -299,7 +300,8 @@ header .logo {
     font-size: .9rem;
   }
 
-  input[type="number"] {
+  input[type="number"],
+  select {
     width: 100%;
   }
 
